--- a/css/main.scss
+++ b/css/main.scss
@@ -1,27 +1,43 @@
-$wikiBlue: #165c91;
+@import 'https://fonts.googleapis.com/css?family=Roboto+Condensed';
 
 body {
     background: #457fca;
     background: -webkit-linear-gradient(to left, #457fca , #5691c8);
     background: linear-gradient(to left, #457fca , #5691c8);
+    color: white;
+    font-family: 'Roboto Condensed', sans-serif;
+}
+
+p {
+    font-size: 1.3em;
+}
+
+#search{
+    font-size: 1.7em;
+    margin: auto 20px;
+}
+
+#title {
+    font-size: 1.5em;
 }
 
 #searchWrap {
     width: 80%;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
 #random {
     font-size: 1.5em;
 }
 
+#card {
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
+
 .main {
-    padding-top: 50px;
+    padding-top: 100px;
 }
 
 .rdm-btn {
     margin: 20px auto;
-}
-
-.wiki-blue {
-    color: $wikiBlue;
 }
